; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_for-each-ref.c_show_ref.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_for-each-ref.c_show_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4
@GIT_REFERENCE_SYMBOLIC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [37 x i8] c"Unable to resolve symbolic reference\00", align 1
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"Unable to lookup object\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"%s %-6s\09%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @show_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_ref(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %13 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %14 = add nsw i32 %13, 1
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %7, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %8, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i64 @git_reference_type(i32* %18)
  %20 = load i64, i64* @GIT_REFERENCE_SYMBOLIC, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %2
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @git_reference_resolve(i32** %6, i32* %23)
  %25 = load i32*, i32** %3, align 8
  %26 = call i8* @git_reference_name(i32* %25)
  %27 = call i32 @check_lg2(i32 %24, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %26)
  br label %28

28:                                               ; preds = %22, %2
  %29 = load i32*, i32** %6, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %33

31:                                               ; preds = %28
  %32 = load i32*, i32** %6, align 8
  br label %35

33:                                               ; preds = %28
  %34 = load i32*, i32** %3, align 8
  br label %35

35:                                               ; preds = %33, %31
  %36 = phi i32* [ %32, %31 ], [ %34, %33 ]
  %37 = call i32* @git_reference_target(i32* %36)
  store i32* %37, i32** %9, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @git_oid_fmt(i8* %17, i32* %38)
  %40 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %17, i64 %41
  store i8 0, i8* %42, align 1
  %43 = load i32*, i32** %5, align 8
  %44 = load i32*, i32** %9, align 8
  %45 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %46 = call i32 @git_object_lookup(i32** %10, i32* %43, i32* %44, i32 %45)
  %47 = call i32 @check_lg2(i32 %46, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %48 = load i32*, i32** %10, align 8
  %49 = call i32 @git_object_type(i32* %48)
  %50 = call i8* @git_object_type2string(i32 %49)
  %51 = load i32*, i32** %3, align 8
  %52 = call i8* @git_reference_name(i32* %51)
  %53 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8* %17, i8* %50, i8* %52)
  %54 = load i32*, i32** %6, align 8
  %55 = icmp ne i32* %54, null
  br i1 %55, label %56, label %59

56:                                               ; preds = %35
  %57 = load i32*, i32** %6, align 8
  %58 = call i32 @git_reference_free(i32* %57)
  br label %59

59:                                               ; preds = %56, %35
  %60 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %60)
  ret i32 0
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @git_reference_type(i32*) #2

declare dso_local i32 @check_lg2(i32, i8*, i8*) #2

declare dso_local i32 @git_reference_resolve(i32**, i32*) #2

declare dso_local i8* @git_reference_name(i32*) #2

declare dso_local i32* @git_reference_target(i32*) #2

declare dso_local i32 @git_oid_fmt(i8*, i32*) #2

declare dso_local i32 @git_object_lookup(i32**, i32*, i32*, i32) #2

declare dso_local i32 @printf(i8*, i8*, i8*, i8*) #2

declare dso_local i8* @git_object_type2string(i32) #2

declare dso_local i32 @git_object_type(i32*) #2

declare dso_local i32 @git_reference_free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
